# aed-proj1-2021

./: CMakeLists.txt  Doxyfile  README.md  flight.cpp  flight.h  plane.cpp  plane.h  proj-uml.drawio
includes/: Airport.h  BST.h  Cart.h  Client.h  Company.h  Exceptions.h  Flight.h  Luggage.h  Menu.h  Plane.h  Service.h  Ticket.h  Transport.h  UserInterface.h  Utils.h  bst.h  constants.h
input/: airport.tsv  client.tsv  company.txt  flight.tsv  flight.txt  plane.tsv  plane.txt  service.tsv  service.txt
src/: Airport.cpp  Cart.cpp  Client.cpp  Company.cpp  Flight.cpp  Luggage.cpp  Menu.cpp  Plane.cpp  Service.cpp  Ticket.cpp  Transport.cpp  UserInterface.cpp  Utils.cpp  main.cpp
